src/style.css
/* ... */
.proof__mistake--smudge {
  text-shadow: 3px 3px 2px rgba(0, 0, 0, 1),
    -3px -3px 4px rgba(0, 0, 0, 1);
}


.proof__mistake {
  position: relative;
  /* background-color: red; */
  /* To ensure that the ::before is positioned relative to the parent */
}

.proof__mistake__found {
  position: relative;
  color: white;
}

.proof__mistake__found::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -3;
  /* Start from the left edge */
  right: -3;
  /* Stretch to the right edge */
  bottom: -2px;
  background-color: var(--c-primary);
  z-index: -1;
  width: 0%;
  /* Initially, the width is 0 */
  transition: width 0.3s ease-in-out;
  /* Animate width from 0 to full width */
}

/* Example to trigger the animation (e.g., on hover) */
.proof__mistake__found::before {
  width: 100%;
  animation: vibrate-1 0.3s linear infinite both;
  /* On hover, expand the width to full width of the parent */
}

.proof .bg__letter--y {
  right: 10%;
}

.proof .bg__letter--w {
  bottom: -10%;
  left: -10%;
}


@keyframes vibrate-1 {
  0% {
    transform: translate(0);
  }

  20% {
    transform: translate(-1px, 1px);
  }

  40% {
    transform: translate(-1px, -1px);
  }

  60% {
    transform: translate(1px, 1px);
  }

  80% {
    transform: translate(1px, -1px);
  }

  100% {
    transform: translate(0);
  }
}

.building{
  position: relative;
}


.building__wrapper {
  /* position: relative; */

  display: grid;
  place-content: center;
  height: 100vh;
  /* border: 1px solid gold; */
  width: 100%;
}

.building__container {
  /* position: absolute; */
  /* top: 30vh;
  left: 30vw; */
  display: grid;
  /* place-content: center; */
  /* width: auto;
  height: 300px; */
  /* width: 50%; */
  width: 100%;
  justify-content: center;
  align-items: center;

  /* border: 1px solid  var(--c-primary); */
  filter: drop-shadow(0px 12px 16px #616161);
}

.building__container>div {
  grid-row: 1;
  grid-column: 1;
  width: 100%;

  /* align-self: center;
  justify-self: center; */

}

.building__container>img {
  grid-row: 1;
  grid-column: 1;
  object-fit: contain;
  /* width: 100%; */

}

.building__text {
  grid-row: 1;
  grid-column: 1;
  padding: 1rem;

  place-self: center;
  /* align-self: baseline; */
  /* border: 1px solid blue; */
  /* width: 100%; */
  height: fit-content;
  /* max-width: 70%; */
  padding: 0rem 2rem;
}

.bulding__img {
  width: 100%;
  /* opacity: 0.2; */
  box-shadow: 83px 0px 59px 0px rgba(0, 0, 0, 1);

}

.building .bg__letter--w {
  right: -10%;
  top: 10%;
}

.building .bg__letter--a {
  bottom: 0%;
  left: -10%;
}

.building .bg__element:first-child{
  position: absolute;
  background-color: red;
  width: 100vw;
  height: 2px;
  /* transform-origin: center; */
  top: 40%;
  transform: translate(0%, -50%);
  background-color: transparent;
    background: repeating-linear-gradient(-45deg, var(--c-primary), var(--c-primary) 6px, transparent 6px, transparent 12px);
    animation: panBackground 2s linear infinite;
    background-size: 18px 18px;
}

.building .bg__element:nth-child(2){
  position: absolute;
    background-color: red;
    width: 100vw;
    height: 2px;
    /* transform-origin: center; */
    top: 66%;
    transform: translate(0%, -50%);
    background-color: transparent;
      background: repeating-linear-gradient(-45deg, var(--c-primary), var(--c-primary) 6px, transparent 6px, transparent 12px);
      animation: panBackground 2s linear infinite reverse;
      background-size: 18px 18px;
}


.mask-method {
  --x: 150px;
  --y: 50px;
  --hole-size: 10rem;
  --scale: 0.1;
  -webkit-mask-image: radial-gradient(circle calc(var(--hole-size) * var(--scale)) at var(--x) var(--y),
      transparent calc(var(--hole-size) * var(--scale)),
      black calc(var(--hole-size) * var(--scale) + 1px));
  mask-image: radial-gradient(circle calc(var(--hole-size) * var(--scale)) at var(--x) var(--y),
      transparent calc(var(--hole-size) * var(--scale)),
      black calc(var(--hole-size) * var(--scale) + 1px));
  transition: --scale 2s ease;
  width: 100%;

}

.map__body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.map__wrapper {
  width: 100%;
  /* max-width: 300px; */
  /* aspect-ratio: 7 / 10; */
  background-color: white;
  z-index: 4;
  margin-bottom: 1rem;
  display: flex;
  justify-content: center;
}

.map__container {
  position: relative;
  background-image: url(/assets/map.webp);
  /* width: 10rem;
  height: 10rem; */
  /* min-width: 10rem; */
  width: 100%;
  max-width: 300px;
  background-size: contain;
  background-repeat: no-repeat;
  /* background-color: blue; */
  aspect-ratio: 7 / 10;
  /* margin: 1rem; */
  z-index: 3;
}

.map__plantin {
  position: absolute;
  cursor: grab;
  background-image: url(/assets/plantin-map.webp);
  background-size: contain;
  width: 3rem;
  height: 3rem;
  bottom: 40%;
  left: 25%;
}

.map__plantin::before {
  content: '';
  position: absolute;
  display: var(--before-display, block);
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  background-color: var(--c-primary);
  border-radius: 50%;
  animation: ping 7s ease-in-out infinite both;
  z-index: 1;
}


@keyframes ping {
  0% {
    transform: scale(0.02);
    opacity: 0.8;
  }

  20% {
    transform: scale(1.2);
    opacity: 0;
  }

  25% {
    transform: scale(2.2);
    opacity: 0;
  }

  100% {
    transform: scale(2.2);
    opacity: 0;
  }
}

.map__unlock--1,
.map__unlock--2 {
  opacity: 0;
  transform: translateY(20px);
  /* Initially moved down */
  transition: opacity 0.5s ease, transform 0.5s ease;
  /* position: relative; */

}






.outro__container {
  display: flex;
  flex-direction: column;
  margin: 0rem 1rem;
  align-items: center;
  gap: 1rem;
}

.outro__image {
  grid-row: 1;
  grid-column: 1;
}

.outro__image--container {
  display: grid;
  justify-content: center;
  align-items: center;
  height: 50%;
}

.outro .bg__letter--w {
  right: -10%;
  bottom: -10%;
}

.outro .bg__letter--a {
  top: 0%;
  left: -5%;
}
/* ... */

